fix: 나의기록 flex-wrap 속성 추가

--- a/src/frontend/book-recommend-service/src/styles/App.css
+++ b/src/frontend/book-recommend-service/src/styles/App.css
@@ -1664,6 +1664,7 @@ input::placeholder{
 
 .savedBooksBottom{
   display: flex;
+  flex-wrap: wrap;
   gap:16px;
 }
 
